--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "hubot-rules": "^0.1.1",
     "hubot-scripts": "^2.17.2",
     "hubot-shipit": "^0.2.0",
-    "hubot-telegram": "^0.1.0"
+    "hubot-telegram": "^0.1.0",
+    "hubot-slack": "~3.4.2"
   },
   "engines": {
     "node": "0.10.x"
